@@ -23,13 +23,10 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 		<springfox.version>2.7.0</springfox.version>
-		<!--<junit.version>5.3.1</junit.version>-->
-		<!--<mockito.core.version>2.23.0</mockito.core.version>-->
-		<!--<mockito.junit.version>2.21.0</mockito.junit.version>-->
 		<starter.data.mongo.version>2.0.5.RELEASE</starter.data.mongo.version>
 		<json.version>20180813</json.version>
-		<spark.version>2.3.2</spark.version>
 		<apache.commons.version>2.6</apache.commons.version>
+		<apache.httpcomponents.version>4.5.6</apache.httpcomponents.version>
 		<junit-jupiter.version>5.3.0-M1</junit-jupiter.version>
 		<mockito-junit-jupiter.version>2.19.0</mockito-junit-jupiter.version>
 		<maven-surefire-plugin.version>2.22.0</maven-surefire-plugin.version>
@@ -85,19 +82,6 @@
             <version>${json.version}</version>
         </dependency>
 
-		<!-- SPARK RELATED DEPENDENCIES -->
-		<dependency>
-			<groupId>org.apache.spark</groupId>
-			<artifactId>spark-core_2.11</artifactId>
-			<version>${spark.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.apache.spark</groupId>
-			<artifactId>spark-sql_2.11</artifactId>
-			<version>${spark.version}</version>
-		</dependency>
-
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
@@ -108,6 +92,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-configuration-processor</artifactId>
 			<optional>true</optional>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>${apache.httpcomponents.version}</version>
 		</dependency>
 
 		<!-- TEST RELATED DEPENDENCIES -->
@@ -123,50 +113,6 @@
 			<version>${mockito-junit-jupiter.version}</version>
 			<scope>test</scope>
 		</dependency>
-
-		<!--<dependency>-->
-			<!--<groupId>org.springframework.boot</groupId>-->
-			<!--<artifactId>spring-boot-starter-test</artifactId>-->
-			<!--<scope>test</scope>-->
-			<!--<exclusions>-->
-				<!--<exclusion>-->
-					<!--<groupId>junit</groupId>-->
-					<!--<artifactId>junit</artifactId>-->
-				<!--</exclusion>-->
-			<!--</exclusions>-->
-		<!--</dependency>-->
-
-		<!--<dependency>-->
-			<!--<groupId>org.junit.jupiter</groupId>-->
-			<!--<artifactId>junit-jupiter-api</artifactId>-->
-			<!--<version>${junit.version}</version>-->
-		<!--</dependency>-->
-		<!--<dependency>-->
-			<!--<groupId>org.junit.jupiter</groupId>-->
-			<!--<artifactId>junit-jupiter-engine</artifactId>-->
-			<!--<version>${junit.version}</version>-->
-		<!--</dependency>-->
-
-		<!--<dependency>-->
-			<!--<groupId>org.mockito</groupId>-->
-			<!--<artifactId>mockito-junit-jupiter</artifactId>-->
-			<!--<version>${mockito.junit.version}</version>-->
-			<!--<scope>test</scope>-->
-		<!--</dependency>-->
-
-        <!--<dependency>-->
-            <!--<groupId>org.mockito</groupId>-->
-            <!--<artifactId>mockito-core</artifactId>-->
-            <!--<version>${mockito.core.version}</version>-->
-            <!--<scope>test</scope>-->
-        <!--</dependency>-->
-
-		<!--<dependency>-->
-			<!--<groupId>org.mockito</groupId>-->
-			<!--<artifactId>mockito-all</artifactId>-->
-			<!--<version>${mockito.version}</version>-->
-			<!--<scope>test</scope>-->
-		<!--</dependency>-->
 	</dependencies>
 
 	<build>
@@ -183,15 +129,6 @@
 					<useSystemClassLoader>false</useSystemClassLoader>
 				</configuration>
 			</plugin>
-			<!--<plugin>-->
-				<!--<groupId>org.apache.maven.plugins</groupId>-->
-				<!--<artifactId>maven-surefire-plugin</artifactId>-->
-				<!--<configuration>-->
-					<!--<forkCount>3</forkCount>-->
-					<!--<reuseForks>true</reuseForks>-->
-					<!--<argLine>-Xmx12G -XX:MaxPermSize=512m</argLine>-->
-				<!--</configuration>-->
-			<!--</plugin>-->
 		</plugins>
 	</build>
 
